Add player detail model and API
